<resources>
    <string name="app_name">GettingToKnowAndroidGeekBrainsJava</string>
    <string name="text_input">Введите число</string>
    <string name="text_result">Результат =</string>
    <string name="text_div">/</string>
    <string name="text_persent">%</string>
    <string name="text_multi">*</string>
    <string name="text_1_x">1/x</string>
    <string name="text_sub">-</string>
    <string name="text_equals">=</string>
    <string name="text_0">0</string>
    <string name="text_dot">.</string>
    <string name="text_add">+</string>
    <string name="input_first_number">Введите первое число</string>
    <string name="input_second_number">Введите второе число</string>
    <string name="btn_compare">Compare</string>
    <string name="switch_text">SWITCH</string>
    <string name="chekbox_text">ChekBox</string>
    <string name="togglebutton_not_checked">ToggleButton Not Checked</string>
    <string name="togglebutton_checked">ToggleButton Checked</string>
    <string name="calendar">Calendar</string>
    <string name="input_text">Введите техт:</string>
    <string name="text_hint">text</string>
    <string name="personname">Введите PersonName:</string>
    <string name="name">name</string>
    <string name="input_telefon">Введите номер телефона:</string>
    <string name="phone">phone</string>
    <string name="input_number">Введите номер :</string>
    <string name="number">number</string>
    <string name="input_password">Введите пароль:</string>
    <string name="password">password</string>
    <string name="email">Введите email:</string>
    <string name="email_hint">email</string>
    <string name="mainactivity2">MainActivity2</string>
    <string name="android_1_java">Android 1. Знакомство с платформой. Язык Java</string>
    <string name="homework_title">Домашние работы</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_10">10</string>
    <string name="text_11">11</string>
    <string name="text_title_setting">Основные настройки Калькулятора</string>
    <string name="text_title_theme_setting">Выберите тему:</string>
    <string name="text_title_formula_setting">Введите формулу для расчета</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_note_book">NavigationNoteBookActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_main">action_main</string>
    <string name="new_menu_item_added">Добавить</string>
    <string name="bottom_title_home">Главная</string>
    <string name="bottom_title_favourite">Избранные</string>
    <string name="bottom_title_add">Добавить</string>
    <string name="popup_title_description">Открыть описание</string>
    <string name="popup_title_update">Изменить</string>
    <string name="popup_title_delete">Удалить</string>
    <string name="popup_title_favourite">Добавить в Избранное</string>
    <string name="popup_title_share">Поделиться</string>
    <string name="toolbar_title_search">Поиск</string>
    <string name="site_404">404. Страница в разработке</string>
    <string name="text_id_note">#1</string>
    <string name="text_name_note">Москва</string>
    <string name="text_date_create_note">Дата записи</string>
    <string name="text_title_id_note">Номер Записи</string>
    <string name="text_name_note_title">Название города</string>
    <string name="text_description_title">Описание</string>
    <string name="text_armof_note_title">Герб</string>
    <string name="popup_title_delete_all">Удалить все записи</string>
    <string name="popup_title_add_note">Добавить запись</string>
    <string name="text_update">Обновить</string>
    <string name="text_plus">+</string>

    <string name="alert_dialog">Alert Dialog</string>
    <string name="alert_title">Alert Title</string>
    <string name="alert_message">Alert message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="neutral">Stuff</string>
    <string name="alert_title_delete">Вы действительно хотите удалить запись?</string>
    <string name="attention">Внимание!</string>
</resources>