<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@mipmap/ic_laptop"
    android:orientation="horizontal"
    tools:context=".lesson2.CalculatorActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_start"
        android:text="@string/text_input"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_result"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_height_width"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_marginEnd="@dimen/margin_main"
        android:paddingStart="@dimen/margin_min"
        android:background="@android:color/darker_gray"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_result"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_text_size_result"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="116dp"
        android:textSize="@dimen/dimen_text_result_field"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_input"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Результат" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_7"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        tools:layout_editor_absoluteY="234dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_8"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        tools:layout_editor_absoluteY="234dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_9"
        app:layout_constraintEnd_toStartOf="@+id/button_div"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        tools:layout_editor_absoluteY="234dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_div"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_div"
        style="@style/ButtonOperationCalculator"
        app:layout_constraintEnd_toStartOf="@+id/button_persent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        tools:layout_editor_absoluteY="234dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_persent"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_persent"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_div"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        tools:layout_editor_absoluteY="234dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_4"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_5"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toBottomOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_6"
        app:layout_constraintEnd_toStartOf="@+id/button_multi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multi"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_multi"
        style="@style/ButtonOperationCalculator"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_1_x"

        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_multi"
        app:layout_constraintTop_toBottomOf="@+id/button_persent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_1"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_3"
        app:layout_constraintEnd_toStartOf="@+id/button_sub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sub"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_sub"
        style="@style/ButtonOperationCalculator"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/button_multi" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_2"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="96dp"
        android:layout_rowSpan="3"
        android:layout_gravity="fill"
        android:layout_marginEnd="@dimen/margin_main"
        android:text="@string/text_equals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:layout_editor_absoluteX="301dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginStart="@dimen/margin_start"
        android:text="@string/text_0"
        app:layout_constraintEnd_toStartOf="@+id/button_dot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        android:layout_width="@dimen/dimen_height_width"
        android:layout_height="wrap_content"
        android:text="@string/text_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintTop_toBottomOf="@+id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/text_add"
        style="@style/ButtonOperationCalculator"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button_sub" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="234dp" />

</androidx.constraintlayout.widget.ConstraintLayout>