<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView_calendar_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toEndOf="@+id/textView_date_title_city"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:id="@+id/textView_id_title_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:text="@string/text_title_id_note"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_id_note_city_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_id_title_city"
            tools:text="Номер Записи" />

        <TextView
            android:id="@+id/textView_date_title_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:text="@string/text_date_create_note"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_id_note_city_update" />

        <EditText
            android:id="@+id/edit_text_date_note_city_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_date_title_city"
            tools:text="Дата создания" />

        <TextView
            android:id="@+id/textView_name_title_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:layout_marginTop="4dp"
            android:text="@string/text_name_note_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_date_note_city_update" />

        <EditText
            android:id="@+id/textView_name_note_city_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_name_title_city"
            tools:text="Название города" />

        <EditText
            android:id="@+id/edit_text_description_title_city_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:text="@string/text_description_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_name_note_city_update" />

        <TextView
            android:id="@+id/textView_description_note_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_description_title_city_update"
            tools:text="Описание" />

        <TextView
            android:id="@+id/textView_avatar_title_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_min"
            android:layout_marginTop="4dp"
            android:text="@string/text_armof_note_title"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_description_note_city" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/notes_image_city_update"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/msc"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_avatar_title_city" />

        <DatePicker
            android:id="@+id/datePicker_note_city_detail"
            android:layout_width="303dp"
            android:layout_height="375dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes_image_city_update" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <ImageView
            android:id="@+id/imageView_image_note_city_update"
            android:layout_width="202dp"
            android:layout_height="226dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_end"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter"
            tools:layout_editor_absoluteX="207dp"
            tools:src="@tools:sample/avatars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>